tests/snapshots/backends_kotlin_jni_emitter_test__snapshot_jni_bridge_object_full_surface.snap
---
source: tests/backends_kotlin_jni_emitter_test.rs
expression: content
---
// Generated by alef. Do not edit by hand.
@file:Suppress(
    "ktlint:standard:max-line-length",
    "ktlint:standard:trailing-comma-on-declaration-site",
    "ktlint:standard:trailing-comma-on-call-site",
    "ktlint:standard:annotation",
    "MaxLineLength",
    "TooManyFunctions",
    "LongParameterList",
)

package dev.sample_crate

@Suppress("TooManyFunctions")
object DemoBridge {
    init { System.loadLibrary("demo_jni") }

    // JNI external funs for client instance methods.
    @Throws(DemoBridgeException::class)
    external fun nativeDefaultClientChat(handle: Long, requestJson: String): String
    @Throws(DemoBridgeException::class)
    external fun nativeDefaultClientEmbeddings(handle: Long, requestJson: String): String
    external fun nativeFreeDefaultClient(handle: Long)

    // Destructor external funs for opaque handle types.
    external fun nativeFreeDefaultClient(handle: Long)
}
